<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B5B2B2"
        android:elevation="4dp"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="268dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="#B5B2B2"
        android:elevation="4dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btn_1"
        app:layout_constraintBottom_toTopOf="@+id/list_1"
        app:layout_constraintStart_toEndOf="@+id/btn_2" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_1"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btn_2"
        app:layout_constraintBottom_toTopOf="@+id/list_1"
        app:layout_constraintStart_toEndOf="@+id/btn_3" />

    <ListView
        android:id="@+id/list_1"
        android:layout_width="412dp"
        android:layout_height="402dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

    </ListView>

    <TextView
        android:id="@+id/text_3"
        android:layout_width="73dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_3"
        android:textAlignment="center"
        android:textColor="#F60505"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/list_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btn_3"
        app:layout_constraintBottom_toTopOf="@+id/list_1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_4"
        android:textColor="#374AB6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_8"
        android:textColor="#050505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_2"
        app:layout_constraintStart_toEndOf="@+id/text_4" />

    <TextView
        android:id="@+id/text_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_7"
        android:textColor="#374AB6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_1"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/text_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_5"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_8"
        app:layout_constraintStart_toEndOf="@+id/text_7"
        app:layout_constraintTop_toBottomOf="@+id/text_1"
        app:layout_constraintVertical_bias="0.514" />

</androidx.constraintlayout.widget.ConstraintLayout>